fixed about text spacing for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ text-decoration: none;
 }
 
 .aboutText {
-    padding: 40% 0   
+    padding: 40% 2%   
 }
 
 .aboutText:hover {
